app/static/styles/chat_style.css
body{
    background-color: #d4e4e9;
}
#chat-window-header{
    display: flex;
    justify-content: space-between;
    color: white;
    background-color: #19303f;
    margin: 4px 0 0 0;
    padding: 15px 10px 7px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.leave-chat{
    border-radius: 10px;
}

.wrapper {
    display: flex;
}

#main-section {
    overflow: hidden; /* Makee this div contain its floated children */
    width: 100%;
}

#sidebar {
    background-color: #e5ecee;
    margin-top: 3em !important; 
    float: left; /* Make this div as wide as its contents */
    min-height: 96vh;
    padding-left: 1em;
    padding-top: 1em;
    padding-right:1em;
    border-right: 0.5px solid #898c91;
}

#sidebar p {
    /* padding-left: 2em;
    padding-right:2em; */
    display: flex;
    justify-content: center;
}

#sidebar p:hover {
    background-color: #ffc107;
}

#sidebar h4 {
    /* padding-left: 0.5em; */
    display: flex;
    justify-content: center;
    padding: 5px 0;
}

#sidebar.view-sidebar {display: none;}

#show-sidebar-button {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s, opacity 0.5s;
    color: #335177;
}

@media (max-width: 567px) {
    #sidebar {
        display: none;
    }

    #sidebar.view-sidebar {
        display: block;
    }

    #show-sidebar-button {
        visibility: visible;
        opacity: 1;
    }
}


.cursor-pointer {
    cursor: pointer;
}

#rightside-pannel {
    overflow: hidden; /* Make this div take up the rest of the horizontal space, and no more */
    margin-top: 3em;
}

#display-message-section {
    min-height: 82vh;
    max-height: 82vh;
    overflow-y: auto; /*Make  this section scrolable */
}

#input-area {
    padding-left: 1em;
    padding-right: 1em;
    bottom: 0;
}

input[type=text]:focus{
    border-color: #ffc107;
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 10px #ffc107;
}

@keyframes fadeIn {
  0% {opacity: 0;}
  100% {opacity: 1;}
}

.others-msg {
    margin-right:7em;
    margin-left: 1em;
    padding: 0.5em 0.5em 0.5em 1em;
    border-radius: 5px;
    border-color: grey;
    border-width: 0.5px;
    border-style: solid;
    background-color: #C2DBFB;
    /* animation */
    animation-name: fadeIn;
    animation-duration: 0.75s;
    animation-fill-mode: forwards;
    animation-timing-function: ease-in-out;
}

.my-msg {
    margin-left:7em;
    margin-right:1em;
    padding: 0.5em 0.5em 0.5em 1em;
    border-radius: 5px;
    border-color: #206ED2;
    border-width: 1px;
    border-style: solid;
    /* animation */
    animation-name: fadeIn;
    animation-duration: 0.75s;
    animation-fill-mode: forwards;
    animation-timing-function: ease-in-out;
}

.system-msg {
    margin-right:7em;
    margin-left: 1em;
    padding: 0.5em 0.5em 0.5em 1em;
    color: #656d78;
    font-size:0.9em;
}

.timestamp {
    color: #656d78;
    font-size:0.7em;
}

.other-username {
    font-weight: bold;
    font-size: 1.1em;
    color: #206ED2;
}

.my-username {
    font-weight: bold;
    font-size: 1.1em;
    color: #FF6B13;
}

#msg-input {
    border-color: #ffc107;
    border-width: 5px;
}

#get-username {
    display: none !important;
}

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
    background-color: #fefefe;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #888;
    width: 80%; /* Could be more or less, depending on screen size */
}

/* The Close Button */
.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

